# senko

./: .arch-review.json  .gitignore  Cargo.toml  LICENSE  README.md  install.sh  mise.toml
.claude/agents/: dod-verifier.md
.claude/skills/localflow/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/senko/: SKILL.md
.claude/skills/senko/scripts/: rebase-merge.sh
.claude/skills/senko/workflows/: config-explain.md  config-setup.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: release.yml
.senko/: config.toml
docs/: CLI.ja.md  CLI.md  DEVELOPMENT.ja.md  DEVELOPMENT.md  README.ja.md  RELEASING.md  plan.md
docs/arch-review/: 2026-03-30.md
docs/knowledge/: layered-architecture-design.md
src/: api.rs  auth.rs  backend.rs  bootstrap.rs  db.rs  dod_verifier_agent.md  dynamodb_backend.rs  hooks.rs  http_backend.rs  lib.rs  main.rs  models.rs  project.rs  skill_md.txt  watch.rs  web.rs
src/application/: hook_trigger.rs  mod.rs  project_service.rs  task_service.rs  user_service.rs
src/application/port/: authentication.rs  hook_executor.rs  mod.rs  task_operations.rs  task_query.rs  task_transition.rs
src/domain/: error.rs  mod.rs  project.rs  repository.rs  task.rs  user.rs  validator.rs
src/domain/config/: mod.rs
src/infra/: mod.rs  project_root.rs
src/infra/config/: mod.rs
src/infra/dynamodb/: mod.rs
src/infra/hook/: executor.rs  mod.rs
src/infra/http/: mod.rs  remote_task_ops.rs
src/infra/postgres/: mod.rs
src/infra/postgres/migrations/: 20260328000000_initial_schema.sql
src/infra/sqlite/: mod.rs
src/presentation/: api.rs  dto.rs  mod.rs  web.rs
src/presentation/api/: mod.rs
src/presentation/cli/: handlers.rs  mod.rs  skill.rs
tests/e2e/: helpers.sh  run.sh  test_add_variants.sh  test_branch.sh  test_config.sh  test_deps.sh  test_edge_cases.sh  test_edit.sh  test_env_overrides.sh  test_hooks_log.sh  test_hooks_test.sh  test_http_backend.sh  test_http_hooks.sh  test_json_error.sh  test_json_output.sh  test_metadata.sh  test_next.sh  test_project_root.sh  test_serve_api.sh  test_skill_install.sh  test_status_transition.sh  test_watch.sh  test_watch_events.sh  test_workflow_complete.sh
