[package]
name = "localflow"
version = "0.9.0"
edition = "2024"

[[bin]]
name = "localflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
chrono = "0.4.44"
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.13"
ammonia = "4"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
