[package]
name = "localflow"
version = "0.11.0"
edition = "2024"

[[bin]]
name = "localflow"
path = "src/main.rs"

[[bin]]
name = "localflow-dynamodb"
path = "src/main.rs"
required-features = ["dynamodb"]

[features]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:aws-config"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
chrono = "0.4.44"
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.13"
ammonia = "4"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }

[dev-dependencies]
tempfile = "3"
